--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.0.{build}
 branches:
   only:
-  - master
+  - main
   - dev
 image: Visual Studio 2019
 install:
@@ -35,4 +35,4 @@ deploy:
   auth_token:
     secure: 2Uyv3KkcTbdZTHXQMGa2O6JZS20RkoWVtItLyAXMy2pnq7K2M5MFkcb6wlHu/yqc
   on:
-    branch: master
+    branch: main
