Upgrade to newest vcpkg versions. Add needed special include dirs for this.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,12 @@ install:
   - cd C:\Tools\vcpkg
   - git pull
   - .\bootstrap-vcpkg.bat
+#  - del /S /Q c:\tools\vcpkg\installed
+  - .\vcpkg.exe install --recurse fontconfig:%PLATFORM%-windows
   - .\vcpkg.exe install --recurse pango:%PLATFORM%-windows
   - .\vcpkg.exe install --recurse libgd:%PLATFORM%-windows
   - .\vcpkg.exe install --recurse wxwidgets:%PLATFORM%-windows
+  - .\vcpkg.exe upgrade --no-dry-run
   - .\vcpkg.exe integrate install
 cache:
   - c:\tools\vcpkg\installed\
