--- a/config/msvc/gnuplot/gnuplot/gnuplot.vcxproj
+++ b/config/msvc/gnuplot/gnuplot/gnuplot.vcxproj
@@ -130,7 +130,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>HAVE_CONFIG_H;USE_MOUSE;USE_WATCHPOINTS;WXWIDGETS;HAVE_CAIROPDF;HAVE_CAIROEPS;HAVE_LIBGD;HAVE_GD_H;HAVE_GD_GIF;GIF_ANIMATION;HAVE_GD_PNG;HAVE_GD_JPEG;HAVE_GD_TTF;HAVE_LIBPNG;WXUSINGDLL;GNUPLOT_PS_DIR="share\\PostScript";PIPES;WGP_CONSOLE;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>HAVE_CONFIG_H;USE_MOUSE;USE_WATCHPOINTS;USE_POLAR_GRID;WXWIDGETS;HAVE_CAIROPDF;HAVE_CAIROEPS;HAVE_LIBGD;HAVE_GD_H;HAVE_GD_GIF;GIF_ANIMATION;HAVE_GD_PNG;HAVE_GD_JPEG;HAVE_GD_TTF;HAVE_LIBPNG;WXUSINGDLL;GNUPLOT_PS_DIR="share\\PostScript";PIPES;WGP_CONSOLE;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\src;$(SolutionDir)..\..\..\term;$(SolutionDir);$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\cairo;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\glib-2.0;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\lib\glib-2.0\include;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\pango-1.0;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\harfbuzz;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
@@ -154,7 +154,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>HAVE_CONFIG_H;USE_MOUSE;USE_WATCHPOINTS;WXWIDGETS;HAVE_CAIROPDF;HAVE_CAIROEPS;HAVE_LIBGD;HAVE_GD_H;HAVE_GD_GIF;GIF_ANIMATION;HAVE_GD_PNG;HAVE_GD_JPEG;HAVE_GD_TTF;HAVE_LIBPNG;WXUSINGDLL;GNUPLOT_PS_DIR="share\\PostScript";PIPES;WGP_CONSOLE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>HAVE_CONFIG_H;USE_MOUSE;USE_WATCHPOINTS;USE_POLAR_GRID;WXWIDGETS;HAVE_CAIROPDF;HAVE_CAIROEPS;HAVE_LIBGD;HAVE_GD_H;HAVE_GD_GIF;GIF_ANIMATION;HAVE_GD_PNG;HAVE_GD_JPEG;HAVE_GD_TTF;HAVE_LIBPNG;WXUSINGDLL;GNUPLOT_PS_DIR="share\\PostScript";PIPES;WGP_CONSOLE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\src;$(SolutionDir)..\..\..\term;$(SolutionDir);$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\cairo;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\glib-2.0;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\lib\glib-2.0\include;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\pango-1.0;$(_ZVcpkgInstalledDir)$(VcpkgTriplet)\include\harfbuzz;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
