If libgd is not configured, fall back to libstbi for reading image files
Several plotting modes depend on being able to read in image data.
We use gdlib routines to read PNG JPEG and GIF files, so if gdlib
is not available then we lose support for
   plot ... binary filetype={png|jpeg|gif} with images
and for pixmaps.

This functionality can be replaced by a call to the public domain / BSD
image loader stb_image.  Documentation and source:
    https://github.com/nothings/stb/blob/master/stb_image.h
This could either be included as a source file or loaded as a library.

- modify the configure script to look for libstbi if libgd has not
  been selected or is not found

- modify the breaders routines with conditional code to call into
  libstbi rathern than libgd

- "show version long" indicates +LIBSTBI in this case

Notes

- without libgd we also lose the sixelgd terminal, but the kitty
  terminals are a reasonable alternative.

--- a/configure.ac
+++ b/configure.ac
@@ -608,6 +608,18 @@ if test "$with_gd" != no; then
 fi
 dnl end gd
 
+dnl If gdlib is not present, we need another way to read in image files.
+dnl Try libstbi
+if test "$with_gd" = no; then
+    AC_CHECK_LIB(stbi, stbi_load_from_file,
+       [AC_DEFINE(HAVE_STBI,1,[ Define to use libstbi as a fallback for reading image data])
+        with_stbi=yes && TERMLIBS="$TERMLIBS -lstbi"
+        AC_CHECK_HEADERS(stb_image.h,,
+            AC_MSG_WARN([please add path to stb_image.h to CPPFLAGS in Makefile]))
+    ])
+fi
+dnl end check for libstbi
+
 dnl The iconv library can be used to switch character encodings.
 dnl So far this is only used by gd.trm and emf.trm.
 AC_SEARCH_LIBS([iconv_open], [iconv],
@@ -1424,6 +1436,12 @@ if test "$enable_history_file" = yes; then
   AC_MSG_RESULT([  Command-line history file:                       yes])
 else
   AC_MSG_RESULT([  Command-line history file:                       no])
+fi
+
+if test "$with_stbi" = yes; then
+  AC_MSG_RESULT([  Support for image file input:                    yes (using libstbi)])
+elif test "$with_gd" = no; then
+  AC_MSG_RESULT([  Support for image file input:                    no (requires libgd or libstbi)])
 fi
 
 if test "${enable_stable_sort}" = yes; then
