docs: tweak Makefile syntax that was leaving .Po files after "make distclean"

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -404,7 +404,7 @@ clean-local:
 	$(AM_V_at)rm -f pdf_figures
 	$(AM_V_at)rm -rf ja
 
-distclean: clean
+distclean-local: clean
 	-rm -f $(BUILT_SOURCES)
 
 #the end
